# vyos-lab

./: .gitignore  Pipfile  README.md  ansible.cfg  flake.nix  hosts  pyproject.toml  requirements.yml  vyos_base.yml  vyos_firewall.yml  vyos_networks.yml  vyos_port-forward.yml  vyos_users.yml
group_vars/: vyos.yml
group_vars/all/: defaults.yml  port_groups.yml  wireguard.yml
group_vars/lab/: networks.yml  port_forward.yml  port_groups.yml
group_vars/lab2/: networks.yml  port_forward.yml
host_vars/: firewall.lab.yml
roles/vyos_base/tasks/: main.yml
roles/vyos_base/templates/: base.j2
roles/vyos_dnat/tasks/: main.yml
roles/vyos_dnat/templates/: dnat.j2  firewall-dnat.j2
roles/vyos_firewall/tasks/: main.yml
roles/vyos_firewall/templates/: firewall.j2  forward-filter.j2  input-filter.j2
roles/vyos_networks/tasks/: main.yml
roles/vyos_networks/templates/: networks.j2
roles/vyos_port-forward/handlers/: main.yml
roles/vyos_port-forward/tasks/: main.yml
roles/vyos_port-forward/templates/: firewall-dnat.j2  port-forward.j2
roles/vyos_users/tasks/: main.yml
roles/vyos_users/templates/: users.j2
vars/: users.yml
