[project]
name = "vyos-lab"
version = "0.0.1"
requires-python = "~=3.12"
dependencies = [
    "ansible==11.*",
    "ansible-lint==24.2.*",
    "ansible-pylibssh==1.2*",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
environments = ["platform_system != 'Windows'"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.python.org/simple"
